overflow was fixed

--- a/src/assets/styles/sass/components/_portfolio.scss
+++ b/src/assets/styles/sass/components/_portfolio.scss
@@ -1,4 +1,5 @@
 #portfolio {
+  overflow: hidden;
   padding: 40px 0;
   position: relative;
   display: flex;
