--- a/src/assets/styles/sass/components/_servicesCard.scss
+++ b/src/assets/styles/sass/components/_servicesCard.scss
@@ -1,4 +1,5 @@
 .services__card {
+  overflow: hidden;
   width: 100%;
   background-color: $white-color;
   padding: 30px;
